# open-puffer

./: Agent.md  BENCHMARKS.md  Cargo.toml  LICENSE  README.md
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  lib.rs  main.rs  routes.rs  state.rs
crates/bench/: Cargo.toml
crates/bench/benches/: segment_benchmarks.rs
crates/bench/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/benches/: distance.rs
crates/core/src/: config.rs  distance.rs  lib.rs  metric.rs  types.rs
crates/embed/: Cargo.toml
crates/embed/src/: chunker.rs  config.rs  embedder.rs  error.rs  lib.rs
crates/fts/: Cargo.toml
crates/fts/src/: config.rs  error.rs  hybrid.rs  index.rs  lib.rs  schema.rs  search.rs
crates/hnsw/: Cargo.toml
crates/hnsw/src/: builder.rs  config.rs  error.rs  graph.rs  lib.rs  search.rs
crates/index/: Cargo.toml
crates/index/src/: ivf_hnsw.rs  ivf_pq.rs  kmeans.rs  lib.rs  search.rs
crates/pq/: Cargo.toml
crates/pq/src/: codebook.rs  config.rs  encoding.rs  error.rs  lib.rs  opq.rs  search.rs
crates/query/: Cargo.toml
crates/query/src/: compaction.rs  engine.rs  error.rs  lib.rs  prefetch.rs  refinement.rs
crates/storage/: Cargo.toml
crates/storage/src/: catalog.rs  error.rs  lib.rs  router.rs  segment.rs
crates/storage/tests/: integration_test.rs
scripts/: benchmark_hybrid.py  compare_benchmarks.py  download_glove.py  plot_real_recall.py  plot_recall_latency.py
