[package]
name = "puffer-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "puffer-cli"
path = "src/main.rs"

[dependencies]
puffer-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
