[package]
name = "puffer-index"
version.workspace = true
edition.workspace = true

[dependencies]
puffer-core = { workspace = true }
puffer-storage = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
rand_distr = { workspace = true }
