[package]
name = "puffer-pq"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Product Quantization (PQ/OPQ) for Puffer vector database"

[dependencies]
puffer-core = { path = "../core" }
rayon.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.8"
