[package]
name = "puffer-query"
version.workspace = true
edition.workspace = true

[dependencies]
puffer-core = { workspace = true }
puffer-storage = { workspace = true }
puffer-index = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
rand = { workspace = true }
