[package]
name = "puffer-query"
version.workspace = true
edition.workspace = true

[dependencies]
puffer-core = { workspace = true }
puffer-storage = { workspace = true }
puffer-index = { workspace = true }
puffer-pq = { workspace = true }
puffer-hnsw = { workspace = true }
puffer-fts = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
rand = { workspace = true }
