[package]
name = "puffer-storage"
version.workspace = true
edition.workspace = true

[dependencies]
puffer-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
rand = { workspace = true }
puffer-index = { workspace = true }
puffer-query = { workspace = true }
